# pumice

./: LICENSE  README.md  filter.py  main.py  pumice.py  pyproject.toml
data/: template.latex
scripts/: install.sh  pumice
src/: pumice.py
tests/: test_filter.py
