[project]
name = "pumice"
license = "MIT"
license-files = ["LICENSE"]
version = "0.1.0"
description = "A little tool for rendering my Obsidian notes to LaTeX PDFs."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "icontract>=2.7.3",
    "pandocfilters>=1.5.1",
    "psutil>=7.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
